src/container/style/Login.css
.Login-body {
  background-color: #1c1917;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
.input-text-above {
  float: left;
  font-weight: bold;
}
.login-text {
  justify-content: center;
  flex-direction: column;
  align-items: center;
  text-align: center;
  display: flex;
}
.login-inputs {
  color: white;

  height: max-content;
  width: 22.4rem;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
  border-radius: 10px;
  backdrop-filter: blur(10px);
  border: 2px solid rgb(0, 136, 785);
  box-shadow: 0 0 150px rgb(0, 136, 255);
  padding: 50px 35px;
}
.text-input {
  display: block;
  height: 50px;
  width: 100%;
  background-color: rgba(255, 255, 255, 0.07);
  border-radius: 3px;
  margin-top: 8px;
  font-size: 20px;
  font-weight: 300;
  outline: none;
  color: #5eead4;
}
.image-input{
  width:50%;
}
.image-inputs{
  display:flex;
  justify-content: space-between;
}
.loginButton {
  margin-top: 50px;
  width: 100%;
  background-color: #00fff77a;
  color: #080710;
  padding: 15px 0;
  font-size: 18px;
  font-weight: 600;
  border-radius: 5px;
  cursor: pointer;
  border: none;
}
.login-select-image{
  cursor:pointer;
  display:flex;
  backdrop-filter: blur(10px);
  background-color:white;
  color:black;
  width:9em;
  height: 3em;
  padding: 1em;
  letter-spacing: 1px;
  border-radius:5px;
  justify-content: center;
  align-self: center;
  margin-top:0.5em;
  background-color: #00fff77a;
  font-weight:bold
  
}
.login-select-image:hover{
  background-color:#065f46


}
.hidden{
  display:hidden
}
.loginButton:hover {
  background-color: #065f46;
}
.image-format-info {
  color: #fde047;
  font-size: 10px;
  float: left;
}

.input_text_above {
  color: #fde047;
}

